# Intel620

./: .gitignore  1  BootUp.py  CHANGELOG.md  GPU.py  README.md  installer.nsi  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  ci.yml  release.yml  windows-release.yml
docs/: OPERATIONS.md  README.template.md  color-configuration.md  configuration-reference.md  display-graphics-management.md  system-initialization.md
docs/source/: api.rst  conf.py  index.rst  runbook.rst
intel620/: __init__.py
intel620/adapters/: win32_api.py
intel620/gui/: panel.py  theme.py
intel620/models/: win32_structures.py
intel620/reporting/: report_writer.py
intel620/services/: __init__.py  brightness_service.py  color_service.py  display_service.py  dll_service.py  dxgi_service.py  graphics_service.py  system_info_service.py
intel620/utils/: formatters.py
scripts/: build_windows.py
scripts/release/: prepare_release.py
tests/: test_imports.py
